# fred-agent-evaluator

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
apps/fred-evaluation-backend/: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  openapi.json  pyproject.toml  pyrightconfig.json
apps/fred-evaluation-backend/.baseline/: bandit-baseline.json  basedpyright-baseline.json  detect-secret-baseline.json
apps/fred-evaluation-backend/config/: configuration.yaml  configuration_prod.yaml
apps/fred-evaluation-backend/dockerfiles/: Dockerfile-api  Dockerfile-worker
apps/fred-evaluation-backend/fred_evaluation_backend/: main.py  main_worker.py
apps/fred-evaluation-backend/fred_evaluation_backend/campaigns/: api.py  base.py  models.py  schemas.py  service.py  store.py
apps/fred-evaluation-backend/fred_evaluation_backend/config/: loader.py  models.py
apps/fred-evaluation-backend/fred_evaluation_backend/datasets/: api.py  models.py  schemas.py  service.py  store.py
apps/fred-evaluation-backend/fred_evaluation_backend/execution/: agent_client.py  analysis_client.py  auth.py  control_plane_client.py  history_client.py  runtime_resolver.py
apps/fred-evaluation-backend/fred_evaluation_backend/migrations/: env.py
apps/fred-evaluation-backend/fred_evaluation_backend/model/: factory.py
apps/fred-evaluation-backend/fred_evaluation_backend/tasks/: __init__.py  api.py  models.py
apps/fred-evaluation-backend/fred_evaluation_backend/telemetry/: otel.py
apps/fred-evaluation-backend/tests/: test_config.py  test_datasets.py  test_datasets_capture.py
libs/fred-deepeval-cli/: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
libs/fred-deepeval-cli/.baseline/: bandit-baseline.json  basedpyright-baseline.json  detect-secret-baseline.json
libs/fred-deepeval-cli/config/: configuration.yaml
libs/fred-deepeval-cli/docs/: evaluating-any-fred-agent.md  rag-evaluation-rfc.md  rag-local-setup.md  sql-evaluation.md
libs/fred-deepeval-cli/fred_deepeval_cli/: dataset_workflow.py  test_helpers.py  worker_adapter.py
libs/fred-deepeval-cli/fred_deepeval_cli/cli/: main.py  (+1 more)
libs/fred-deepeval-cli/scripts/: run_rag_scenarios.py  run_sql_scenarios.py
libs/fred-deepeval-cli/tests/: rag_dataset.json  rag_dataset_mini.json  rag_dataset_no_expected.json  test_classify.py  test_cli_parser.py  test_deepeval_adapter.py  test_deepeval_runner.py  test_eval_client.py  test_main.py  test_preset_resolver.py  test_run_sql_scenarios.py  test_sql_structural_checks.py  test_structural_checks.py
(+43 files in other folders)
